<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/toolbars"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bantuan_pengukur1"
                android:textColor="@color/warnateksjudul"
                android:textSize="@dimen/ukuran16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bantuan_pengukur2"
                android:textColor="@color/warnateksjudul"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/ukuran16sp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bantuan_pengukur3"
                android:textColor="@color/warnateksjudul"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/ukuran16sp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/warnateksjudul"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/ukuran16sp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>