<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin_left"
        android:layout_marginLeft="@dimen/card_margin_left"
        android:layout_marginRight="@dimen/card_margin_left"
        android:layout_marginTop="4dp"
        app:cardBackgroundColor="@color/putih"
        app:contentPadding="@dimen/contentpaddingcard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kartusetel_judul"
                android:textSize="@dimen/ukuran16sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/abubayangan"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kartusetel_keterangan"
                android:textSize="@dimen/ukuran16sp"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/abubayangan"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/tombol_setelan_aplikasi"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kartusetel_tekstombol_setelanapp"
                    android:textColor="@color/color_teks_button"
                    android:textSize="@dimen/ukuran14sp"
                    android:textStyle="bold"/>

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>