<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/toolbars"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin_left"
                android:layout_marginLeft="@dimen/card_margin_left"
                android:layout_marginRight="@dimen/card_margin_left"
                android:layout_marginTop="@dimen/card_margin_left"
                app:cardBackgroundColor="@color/putih"
                app:contentPadding="@dimen/contentpaddingcard">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/judul_kartu_setelbatas"
                        android:textSize="@dimen/ukuran16sp"
                        android:textStyle="bold"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/abubayangan"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/teks_bantuan_setelan_kecepatan"
                        android:textColor="@color/warnateksjudul"
                        android:textSize="@dimen/ukuran15sp"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/edit_nilai_batas_kecepatan"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_batas_kecepatan"
                                android:imeOptions="actionDone"
                                android:inputType="numberDecimal"
                                android:singleLine="true"
                                android:textSize="@dimen/ukuran15sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:background="@color/abulatarspin"
                            android:gravity="center"
                            android:orientation="vertical">

                            <Spinner
                                android:id="@+id/spin_tipe_kecepatan"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginRight="2dp"
                                android:prompt="@string/promp_spin_tipekecepatan"
                                />

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/abubayangan"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/tombol_simpan_setelan"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/teks_tombol_simpansetelan"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/ukuran14sp"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <include layout="@layout/incl_setelanaplikasi_keteranganbantuan"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>