<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin_left"
                android:layout_marginLeft="@dimen/card_margin_left"
                android:layout_marginRight="@dimen/card_margin_left"
                android:layout_marginTop="@dimen/card_margin_top"
                app:cardBackgroundColor="@color/putih"
                app:contentPadding="@dimen/contentpaddingcard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/teks_grafik_kecepatan"
                        android:textSize="@dimen/ukuran16sp"
                        android:textStyle="bold"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/abubayangan"/>

                    <!-- GRAFIK KECEPATAN BARU -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginTop="8dp"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/barkecepatan"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0"
                            android:background="@color/hijaunow"
                            android:orientation="vertical">

                            <View
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/barkecepatanbg"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="150"
                            android:background="@color/abubgnow"
                            android:orientation="vertical">

                            <View
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="14dp"
                        android:background="@color/abubayangan"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="2dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/teks_kecepatan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLength="5"
                            android:singleLine="true"
                            android:text="0"
                            android:textColor="@color/biru_indikator"
                            android:textSize="85sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/teksatuan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="km/jam"
                            android:textColor="@color/warnateksjudul"
                            android:textSize="22sp"
                            android:textStyle="bold"/>


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="14dp"
                        android:background="@color/abubayangan"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/gambarstatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/teks_grafik_status_kecepatan"
                                android:textColor="@color/warnateksjudul"
                                android:textSize="@dimen/ukuran15sp"/>

                            <TextView
                                android:id="@+id/teksstatuscepatan"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="AMAN"
                                android:textColor="@color/hijaunow"
                                android:textSize="@dimen/ukuran16sp"
                                android:textStyle="bold"/>

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="14dp"
                        android:background="@color/abubayangan"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/teks_grafik_lokasi_pengguna"
                            android:textColor="@color/warnateksjudul"
                            android:textSize="@dimen/ukuran15sp"/>

                        <TextView
                            android:id="@+id/teks_posisipenggunasekarang"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/kartustat_lokasipengguna_belumtersedia"
                            android:textColor="@color/warnatekssubjudul"
                            android:textSize="@dimen/ukuran15sp"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>